--- a/index.html
+++ b/index.html
@@ -1,103 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Doomsday</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Navar -->
     <header id="main-header">
-        <nav>
-            <div class="logo">
-                <img alt="LOGO" src="assets/ZuriLogo.svg" />
-            </div>
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav>
+        <div class="logo">
+          <img alt="LOGO" src="assets/ZuriLogo.svg" />
+        </div>
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button> -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li class="login-Btn"><a href="#">Login</a></li>
-                    <li class="joinUs-Btn"><a href="#">Join Us</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li class="login-Btn"><a href="#">Login</a></li>
+            <li class="joinUs-Btn"><a href="#">Join Us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <!-- front -->
+          <!-- Navar -->
 
-        <!-- Welcome section -->
-        <div id="welcome">
+          <!-- Welcome section -->
+          <div id="welcome">
             <div class="welcome-hero">
-                <h1>Zuri X</h1>
-                <h1>Ingressive4Good</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum purus at accumsan, volutpat
-                    consequat
-                    nulla ornare. Integer vulputate sollicitudin.</p>
-                <button>Sign Up</button>
+              <h1>Zuri X</h1>
+              <h1>Ingressive4Good</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Bibendum purus at accumsan, volutpat consequat nulla ornare.
+                Integer vulputate sollicitudin.
+              </p>
+              <button>Sign Up</button>
             </div>
             <div class="hero-img">
-                <img src="assets/mainImage.svg" alt="Welcome Image">
+              <img src="assets/mainImage.svg" alt="Welcome Image" />
             </div>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <!-- back -->
 
-        </div>
-    </header>
-    <!-- Main section -->
-    <main id="main-section">
-        <!--  -->
-        <div class="main-image">
-            <img src="assets/mainImage.svg" alt="Welcome Image">
-        </div>
-        <!-- Register section -->
-        <div id="register">
-            <h2>Join Our Community</h2>
-            <p>Join the Zuri X I4G Network to access tech opportunities and resources</p>
-            <div class="name">
-                <Label>Name:</Label>
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
+          <!-- Main section -->
+          <main id="main-section">
+            <!--  -->
+            <div class="main-image">
+              <img src="assets/mainImage.svg" alt="Welcome Image" />
             </div>
-            <div class="email">
-                <Label>Email Address:</Label>
-                <input type="email" placeholder="Username@gmail.com">
-            </div>
-            <div class="phone-number">
-                <Label>Phone Number:</Label>
-                <input type="text" placeholder="07035XXXXXX">
-            </div>
-            <div class="password">
-                <Label>Password:</Label>
-                <input type="password" placeholder="xxxxxxxxxx">
-            </div>
-            <div class="confirm-password">
-                <Label>Confirm Password:</Label>
-                <input type="Confirm Password" placeholder="xxxxxxxxxx">
-            </div>
-            <div class="register-btn">
+            <!-- Register section -->
+            <div id="register">
+              <h2>Join Our Community</h2>
+              <p>
+                Join the Zuri X I4G Network to access tech opportunities and
+                resources
+              </p>
+              <div class="register-div">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="First Name E.g John"
+                />
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Last Name E.g Doe"
+                />
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="E-mail E.g johndoe@email.com"
+                />
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Phone number E.g 090003000"
+                />
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Password"
+                />
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Confirm Password"
+                />
+              </div>
+
+              <div class="register-btn">
                 <button>Sign Up</button>
                 <label>Already a member?</label>
                 <label class="login-link">Login</label>
+              </div>
             </div>
+          </main>
         </div>
+      </div>
+    </div>
 
-    </main>
     <!-- Main footer -->
-    <footer>
-        <label>Privacy Policy | Terms of Use</label>
-        <label>Zuri X Ingressive4Good 2021</label>
-
+    <footer class="footer mt-auto py-3">
+      <label>Privacy Policy | Terms of Use</label>
+      <label>Zuri X Ingressive4Good 2021</label>
     </footer>
-
-</body>
-
+  </body>
 </html>
